// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< DefinitionList /> Should match to snapshot 1`] = `
<div>
  <div
    class="chakra-stack css-jp20jv"
  >
    <div
      class="css-1dixb64"
    >
      <p
        class="chakra-text css-kwpule"
      >
        List Title
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        List Description
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title 2"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title 2
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        List Description
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title 3"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title 3
      </p>
      <p
        class="chakra-text css-uivqlt"
      >
        List Description
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-With custom content"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        With custom content
      </p>
      <div
        class="css-uivqlt"
      >
        <div
          class="css-0"
          data-testid="custom-content"
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`< DefinitionList /> Should render with grid 1`] = `
<div>
  <div
    class="css-4xvynu"
    items="[object Object],[object Object],[object Object],[object Object]"
    title="List Title"
  >
    <div
      class="chakra-stack css-jp20jv"
    >
      <div
        class="css-1dixb64"
      >
        <p
          class="chakra-text css-kwpule"
        >
          List Title
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-List Title"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          List Title
        </p>
        <p
          class="chakra-text css-uivqlt"
        >
          List Description
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-List Title 2"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          List Title 2
        </p>
        <p
          class="chakra-text css-uivqlt"
        >
          List Description
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-List Title 3"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          List Title 3
        </p>
        <p
          class="chakra-text css-uivqlt"
        >
          List Description
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-With custom content"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          With custom content
        </p>
        <div
          class="css-uivqlt"
        >
          <div
            class="css-0"
            data-testid="custom-content"
          />
        </div>
      </div>
    </div>
    <div
      class="chakra-stack css-jp20jv"
    >
      <div
        class="css-1dixb64"
      >
        <p
          class="chakra-text css-kwpule"
        >
          List Title
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-List Title"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          List Title
        </p>
        <p
          class="chakra-text css-uivqlt"
        >
          List Description
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-List Title 2"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          List Title 2
        </p>
        <p
          class="chakra-text css-uivqlt"
        >
          List Description
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-List Title 3"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          List Title 3
        </p>
        <p
          class="chakra-text css-uivqlt"
        >
          List Description
        </p>
      </div>
      <div
        class="css-tvba8"
        data-testid="definition-list-item-With custom content"
        tabindex="0"
      >
        <p
          class="chakra-text css-vbc1qe"
        >
          With custom content
        </p>
        <div
          class="css-uivqlt"
        >
          <div
            class="css-0"
            data-testid="custom-content"
          />
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`< DefinitionList /> Should render with loading item: WithLoadingItem 1`] = `
<div>
  <div
    class="chakra-stack css-jp20jv"
  >
    <div
      class="css-1dixb64"
    >
      <p
        class="chakra-text css-kwpule"
      >
        List Title
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title 2"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title 2
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title 3"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title 3
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-With custom content"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        With custom content
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`< DefinitionList /> Should render with loading: WithLoading 1`] = `
<div>
  <div
    class="chakra-stack css-jp20jv"
  >
    <div
      class="css-1dixb64"
    >
      <p
        class="chakra-text css-kwpule"
      >
        List Title
      </p>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title 2"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title 2
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-List Title 3"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        List Title 3
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
    <div
      class="css-tvba8"
      data-testid="definition-list-item-With custom content"
      tabindex="0"
    >
      <p
        class="chakra-text css-vbc1qe"
      >
        With custom content
      </p>
      <div
        class="chakra-skeleton__group css-1rr4qq7"
      >
        <div
          class="chakra-skeleton css-5dkehc"
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
